posiGen_FullsendBox/src/objects/Sales_Quote_Total__c.object
<CustomObject>
    <description>Subtotals, discounts, taxes, etc. applied to the sales quote.</description>
    <fields>
        <fullName>Absolute_Value__c</fullName>
        <label>Absolute Value</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Value__c</fullName>
        <label>Percent Value</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Quote__c</fullName>
        <label>Sales Quote</label>
        <referenceTo>Sales_Quote__c</referenceTo>
        <relationshipName>R00N40000001jWomEAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Quote Total</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Quote Totals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>